# octodocs

./: .gitignore  LICENSE  README.md  install.sh
.github/: FUNDING.yml  copilot-instructions.md
.github/agents/: Documenter.md  Plan-Doc.agent.md  Plan-Exec.agent.md  Researcher.agent.md
.github/workflows/: ci.yml  pages.yml  release.yml
desktop/: Cargo.toml  Makefile  rust-toolchain.toml
desktop/crates/octodocs-app/: Cargo.toml
desktop/crates/octodocs-app/src/: app_state.rs  main.rs  rich_block_editor.rs  updater.rs
desktop/crates/octodocs-app/src/views/: block_editor_pane.rs  document_editor_pane.rs  editor_pane.rs  github_auth_modal.rs  github_panel.rs  github_sidebar.rs  insert_link_modal.rs  mod.rs  preview_pane.rs  repo_add_modal.rs  root.rs
desktop/crates/octodocs-core/: Cargo.toml
desktop/crates/octodocs-core/src/: doc_model.rs  document.rs  file_io.rs  lib.rs  mermaid.rs  renderer.rs  rich_block.rs
desktop/crates/octodocs-github/: Cargo.toml
desktop/docs/: reset-state.md
desktop/patches/: implemented-changes-and-rationale.md
desktop/patches/adabraka-gpui/: .cargo-checksum.json  .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
docs/: agentsleague-submission.md  index.html  release-process.md  word-style-formatting-technique.md
docs/plans/: ci-builds-and-git-pull.md  desktop-markdown-editor-implementation.md  file-switch-performance-optimization.md  github-sidebar-redesign.md  github-sync-implementation.md  release-process.md  true-wysiwyg-rich-editor-implementation.md  word-style-editor-implementation.md
(+303 files in other folders)
