[package]
name = "octodocs-app"
version = "0.1.8"
edition = "2021"

[dependencies]
octodocs-core = { path = "../octodocs-core" }
octodocs-github = { path = "../octodocs-github" }
adabraka-ui = "0.3"
gpui = { package = "adabraka-gpui", version = "0.3" }
rfd = "0.15"
anyhow = "1"
dotenvy = "0.15"
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
